[workspace]
members = ["crates/hysteria"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"
incremental = false

[profile.test.package."*"]
debug = "none"
debug-assertions = false
strip = "debuginfo"
incremental = false

[profile.release]
debug = "full"
codegen-units = 1
lto = "thin"

[workspace.lints.rust]
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "deny"
missing_abi = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
# Pedantic lint group (base)
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides
missing_errors_doc = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"
unsafe_derive_deserialize = "allow"
missing_panics_doc = "allow"
cast_sign_loss = "allow"
missing_fields_in_debug = "allow"
unnecessary_wraps = "allow"

# Strict lints (beyond pedantic)
unused_async = "deny"
large_futures = "deny"
unwrap_used = "deny"

# Restriction lints (Go-like strictness - not in pedantic)
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
expect_used = "deny"
panic = "deny"
string_add = "deny"
clone_on_ref_ptr = "deny"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
missing_assert_message = "deny"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
undocumented_unsafe_blocks = "deny"

[workspace.dependencies]
anyhow = "1.0.102"
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt"] }
