[workspace]
members = [
    "crates/config",
    "crates/conn-error",
    "crates/dataplane",
    "crates/hysteria",
    "crates/model",
    "crates/netstack",
    "crates/profile",
    "crates/store",
    "crates/transport-socks5",
    "crates/transport-tun",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"
incremental = false

[profile.test.package."*"]
debug = "none"
debug-assertions = false
strip = "debuginfo"
incremental = false

[profile.release]
debug = "full"
codegen-units = 1
lto = "thin"

[workspace.lints.rust]
# Memory safety by construction: no crate may use `unsafe`. The FFI crates
# (ffi-util/ffi-app/ffi-ext), when added, override this per-crate at the C-ABI
# boundary — the only place `unsafe` is permitted.
unsafe_code = "forbid"
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "deny"
missing_abi = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
# Pedantic lint group (base)
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides
missing_errors_doc = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"
unsafe_derive_deserialize = "allow"
missing_panics_doc = "allow"
cast_sign_loss = "allow"
missing_fields_in_debug = "allow"
unnecessary_wraps = "allow"

# Strict lints (beyond pedantic)
unused_async = "deny"
large_futures = "deny"
unwrap_used = "deny"

# Restriction lints (Go-like strictness - not in pedantic)
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
expect_used = "deny"
panic = "deny"
string_add = "deny"
clone_on_ref_ptr = "deny"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
missing_assert_message = "deny"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
undocumented_unsafe_blocks = "deny"

[workspace.dependencies]
anyhow = "1.0.102"
blake2 = "0.10.6"
bytes = "1.11.1"
# transport-socks5 CLI.
clap = { version = "4.5.51", features = ["derive"] }
# transport-socks5 SOCKS5 server, incl. UDP datagram framing (new_udp_header /
# parse_udp_request). MIT-licensed.
fast-socks5 = "1.0.0"
# hysteria2:// link parsing (config crate): percent-encoding + query (de)serde.
form_urlencoded = "1.2.2"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.1"
percent-encoding = "2.3.2"
pretty_assertions = "1.4.1"
# QUIC transport. aws-lc-rs is the chosen crypto provider. We build our own
# rustls config (TLS 1.3 + ALPN h3) and install the verifier into it, so quinn's
# built-in `platform-verifier` feature stays off; server-cert trust is the OS
# trust store via `rustls-platform-verifier` (see hysteria/client/tls.rs).
quinn = { version = "0.11.9", default-features = false, features = [
    "runtime-tokio",
    "rustls-aws-lc-rs",
] }
quinn-proto = { version = "0.11.14", default-features = false }
# Non-cryptographic randomness (padding, packet IDs), like Go's math/rand.
rand = "0.9.4"
# TLS 1.3 only (QUIC requires it), aws-lc-rs provider; default features (incl.
# tls12) dropped since QUIC never uses them.
rustls = { version = "0.23.40", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pki-types = "1.14.1"
# Server-cert verification via the OS trust store (system roots, native chain
# validation incl. Android via JNI). We install it into our own rustls config to
# keep ALPN h3 + TLS 1.3, so quinn's built-in `platform-verifier` feature is off.
rustls-platform-verifier = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Derive `Error`/`Display` for the error types across the workspace.
thiserror = "2.0.18"
# Atomic file writes (temp + rename) and self-cleaning temp dirs in tests.
tempfile = "3.27.0"
# UUID type + RFC 4122 formatting for profile ids (`v4` feature off; we seed the
# bytes from `rand`, already in the tree, to avoid a third `getrandom`).
uuid = "1.23.2"
# Wipe serialized-secret byte buffers from memory after use (store crate).
zeroize = "1.8.2"
# Userspace TCP/IP netstack over smoltcp for the TUN front-end
# (netstack crate): wraps smoltcp and hands back accepted TCP
# streams + a UDP socket, so we don't hand-roll packet parsing / socket lifecycle.
netstack-smoltcp = "0.2.2"
# Sink/Stream adapters for bridging the netstack to the TUN device.
futures = "0.3.31"
# Cross-platform TUN device (macOS utun, OS-provided fd) for
# transport-tun/netstack.
tokio = { version = "1.52.3", features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt",
    "signal",
    "sync",
    "time",
] }
tun-rs = { version = "2.8.3", features = ["async"] }
# transport-socks5 e2e test: a real SOCKS5 client + TLS to reach the internet.
rustls-native-certs = "0.8.2"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws-lc-rs"] }
tokio-socks = "0.5.2"
