[project]
name = "workspace"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = []

[tool.uv]
required-version = ">=0.9.21"
exclude-newer = "1 day"

[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "semgrep==1.151.0 ; sys_platform != 'win32'",
    "zizmor==1.25.2 ; sys_platform != 'win32'",
]
