[package]
name = "hysteria"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
# BLAKE2b-256 for Salamander obfuscation.
blake2.workspace = true
bytes.workspace = true
# Secret-free connect-failure categories that `connect` errors map to.
conn-error = { path = "../conn-error" }
# HTTP/3 auth handshake over the QUIC connection.
h3.workspace = true
h3-quinn.workspace = true
http.workspace = true
# Parsed connection profile; the `Config::from_profile` builder maps it to the
# client config (hysteria owns the `&Profile -> client config` builder).
profile = { path = "../profile" }
# QUIC transport + Brutal congestion control (`quinn_proto::congestion`).
quinn.workspace = true
quinn-proto.workspace = true
# Non-cryptographic randomness for framing padding and UDP packet IDs.
rand.workspace = true
# TLS client config (TLS 1.3, ALPN h3).
rustls.workspace = true
rustls-pki-types.workspace = true
# Server-cert verification against the OS trust store (system roots).
rustls-platform-verifier.workspace = true
# Derive Display/Error for the client/protocol error types.
thiserror.workspace = true
# Session manager: `sync` (mpsc/Mutex) and `rt` (background task), from the
# workspace feature set.
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
pretty_assertions.workspace = true
serde.workspace = true
serde_json.workspace = true
