[package]
name = "netstack"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
# Sink/Stream adapters for bridging the netstack to the TUN device.
futures.workspace = true
# Userspace TCP/IP netstack over smoltcp: accepts each flow from the TUN's IP
# packets and hands back async TCP streams + a UDP socket, so we don't hand-roll
# packet parsing / socket lifecycle / flow detection.
netstack-smoltcp.workspace = true
# Netstack runner + the TUN<->stack pumps + the UDP writer task, and channels.
tokio.workspace = true
# TUN device (the OS-provided fd in production; a utun in the dev harness).
tun-rs.workspace = true
