[package]
name = "transport-tun"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
config = { path = "../config" }
dataplane = { path = "../dataplane" }
hysteria = { path = "../hysteria" }
tokio.workspace = true
tun-rs.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
